# gnn-jax

./: README.md  main.py  pyproject.toml
examples/: mlp_toy.py
examples/cylinderflow/: config.yaml  meshgraphnet.py  parse_data.py  plot_comp.py  run.py  train.py  train_one_traj.py
examples/cylinderflow/scripts/: get_model.py  plot_utils.py  setup_run.py
expt/car_aero/: config.yaml  tt.py
expt/train_on_small_cyl/: base.py  config.yaml  plot.py  plot_comp.py  plot_err_cost.py  plot_histo_R.py  plot_zeroE.py  split_train.py
expt/train_on_small_cyl/scripts/: asymm_check.py  plot_utils.py  run_model.py  setup_run.py  train.py
src/gnn_jax/: gnn_block.py  gnn_layer.py  meshgraphnet.py  mlp.py  normalisation.py  normalizer.py
src/gnn_jax/data/: deepmind_cylinderflow.py
src/gnn_jax/data/cylinderflow_dm/: evaluate.py  load.py  train.py  trajectory.py
src/gnn_jax/data/drivaerml/: load_surface.py
