[project]
name = "gnn-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "jax[cuda13]>=0.10.0",
    "jraph>=0.0.6.dev0",
    "matplotlib>=3.10.9",
    "optax>=0.2.8",
    "pandas>=3.0.3",
    "tensorflow-cpu>=2.21.0",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
